--- a/app/src/main/res/layout/content_rider.xml
+++ b/app/src/main/res/layout/content_rider.xml
@@ -30,4 +30,14 @@
         android:layout_marginEnd="10dp"
         android:textSize="18sp"
         android:onClick="riderLogOut" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:id="@+id/infoTextView"
+        android:textSize="22sp"
+        android:layout_alignBaseline="@+id/callUberButton"
+        android:layout_alignBottom="@+id/callUberButton"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
