--- a/app/src/main/res/layout/content_rider.xml
+++ b/app/src/main/res/layout/content_rider.xml
@@ -36,8 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
         android:id="@+id/infoTextView"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:layout_alignBaseline="@+id/callUberButton"
         android:layout_alignBottom="@+id/callUberButton"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@android:color/holo_red_light" />
 </RelativeLayout>
